K8s_Yaml/App/Daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: mydaemonset
  labels:
    app: mydstest
spec:
  selector:
    matchLabels:
      app: mydstest
  template:
    metadata:
      name: mydaemonset
      labels:
        app: mydstest
    spec:
      containers:
        - name: mydaemonsetcontainer
          image: quay.io/fluentd_elasticsearch/fluentd:latest
