K8s_Yaml/App/initContainer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myinitdep
  name: myinitdep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myinitdep
  template:
    metadata:
      labels:
        app: myinitdep
    spec:
      containers:
        - image: nginx:latest
          name: nginx
