K8s_Yaml/App/Pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dockerpoc-1
  labels:
    component: web
spec:
  containers:
    - name: dockerpoc-1
      image: vishal210893/dockerpoc-1:8
      ports:
        - containerPort: 8005
---
apiVersion: v1
kind: Service
metadata:
  name: dockerpoc-1-node-port
spec:
  type: NodePort
  ports:
    - port: 8006
      targetPort: 8005
      nodePort: 30555
  selector:
    component: web
