K8s_Yaml/App/Deployment.yaml
# DEPLOYMENT.YAML
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dockerpoc-1-deployment
  labels:
    canbeanykey: canbeanyvalue
spec:
  replicas: 1
  selector:
    matchLabels:
      component: dockerpoc-1
  template:
    metadata:
      labels:
        component: dockerpoc-1
    spec:
      containers:
        - name: dockerpoc-1
          image: vishal210893/dockerpoc-1:10
          ports:
            - containerPort: 8005
          volumeMounts:
            - mountPath: /opt/file
              name: filestorage
      volumes:
        - name: filestorage
          persistentVolumeClaim:
            claimName: file-pvc

---

# CLUSTER-IP.YAML
apiVersion: v1
kind: Service
metadata:
  name: dockerpoc-1-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: dockerpoc-1
  ports:
    - port: 8008
      targetPort: 8005

---

# INGRESS.YAML
# kc port-forward svc/ingress-nginx-controller 8080:80 -n ingress-nginx
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /docker/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dockerpoc-1-cluster-ip
                port:
                  number: 8008
          - path: /cloud/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cloudtest-cluster-ip
                port:
                  number: 9015


---

### NODE-PORT SERVICE
#apiVersion: v1
#kind: Service
#metadata:
#  name: dockerpoc-1-node-port
#spec:
#  type: NodePort
#  ports:
#    - port: 8006
#      targetPort: 8005
#      nodePort: 30080
#  selector:
#    component: dockerpoc-1
